c4prj2_input/grade.txt
Grading at Sun Sep 30 07:51:08 UTC 2018
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘future_cards_from_deck’:
future.c:37:30: error: incompatible types when assigning to type ‘card_t {aka struct card_tag}’ from type ‘card_t * {aka struct card_tag *}’
       *fc->decks[i].cards[j] = deck->cards[i];
                              ^
Compilation of future.c failed

Overall Grade: F
